# Embedded-cource-project

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  domain.py  main.py  models.py  realtime.py  schemas.py
app/routers/: api.py  pages.py
app/services/: queue.py
app/static/: app.css  call-station.js  take-number.js
app/templates/: base.html  call_station.html  take_number.html
tests/: test_api.py  test_pages.py  test_queue_service.py
